--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=AsyncTCP
-version=1.1.1
+name=BrentIO_AsyncTCP
+version=2024.2.1
 author=Me-No-Dev
-maintainer=Me-No-Dev
+maintainer=https://github.com/brentio
 sentence=Async TCP Library for ESP32
 paragraph=Async TCP Library for ESP32
 category=Other
-url=https://github.com/me-no-dev/AsyncTCP
+url=https://github.com/BrentIO/AsyncTCP
 architectures=*
